--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
         app:layout_constraintVertical_bias="0.704"
         tools:ignore="HardcodedText" />
 
-    <TextView
+    <EditText
         android:id="@+id/textView"
         android:layout_width="119dp"
         android:layout_height="54dp"
